Add filter functionality + color legend

--- a/css/main.css
+++ b/css/main.css
@@ -55,3 +55,8 @@ rect.selection {
   right: -9px; /* half the width */
   border-radius: 9px;
 }
+
+/**/
+.slider-container {
+  display: inline-block;
+}
