--- a/css/main.css
+++ b/css/main.css
@@ -28,7 +28,8 @@ rect.selection {
 .slider-container {
     height:50px;
     width: 200px;
-    padding: 20px;
+    padding-bottom: 20px;
+    padding-left: 20px;
 }
 .slider-input {
   margin-top: 5px;
