--- a/css/main.css
+++ b/css/main.css
@@ -61,3 +61,16 @@ rect.selection {
 .slider-container {
   display: inline-block;
 }
+
+/**/
+#stats-table-div {
+  height: 200px;
+  padding-bottom: 20px;
+  padding-left: 20px;
+  padding-right: 20px;
+  margin-top: 50px;
+  overflow: scroll;
+}
+.sort-col-head {
+  cursor: pointer;
+}
