--- a/css/main.css
+++ b/css/main.css
@@ -1,18 +1,5 @@
 body { font: 12px Arial;}
 
-div.tooltip {
-    position: absolute;
-    //text-align: center;
-    //width: 500px;
-    //height: 100px;
-    padding: 5px;
-    font: 12px sans-serif;
-    background: black;
-    color: grey;
-    border: 0px;
-    border-radius: 8px;
-    pointer-events: none;
-}
 
 rect.overlay {
 	stroke: black;
@@ -21,6 +8,40 @@ rect.selection {
 	stroke: none;
   fill: steelblue;
   fill-opacity: 0.6;
+}
+
+
+#viz {
+  position: relative;
+}
+
+.svg-plot,
+.canvas-plot {
+  position:absolute;
+}
+
+/*.canvas-plot {
+  display: none;
+}*/
+.hidden-canvas {
+  position:absolute;
+  display: none;
+  /*image-rendering: pixelated;    // disable anti-aliasing so that all pixels of the shapes are the same color!
+  image-rendering: crisp-edges;  // disable anti-aliasing so that all pixels of the shapes are the same color!*/
+}
+
+div.tooltip {
+    position: absolute;
+    /*text-align: center;
+    //width: 500px;
+    //height: 100px;*/
+    padding: 5px;
+    font: 12px sans-serif;
+    background: black;
+    color: grey;
+    border: 0px;
+    border-radius: 8px;
+    pointer-events: none;
 }
 
 
