--- a/css/main.css
+++ b/css/main.css
@@ -42,6 +42,22 @@ div.tooltip {
     border: 0px;
     border-radius: 8px;
     pointer-events: none;
+		opacity: 0;
+}
+
+div.diff-tooltip {
+    position: absolute;
+    /*text-align: center;
+    //width: 500px;
+    //height: 100px;*/
+    padding: 5px;
+    font: 12px sans-serif;
+    background: blue;
+    color: white;
+    border: 0px;
+    border-radius: 8px;
+    pointer-events: none;
+		opacity: 0;
 }
 
 
